cluster/apps/networking-system/ingresses/base/radicale/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radicale
  labels:
    app.kubernetes.io/name: radicale
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dav.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: secure-headers
      services:
        - name: radicale
          port: 5232
          namespace: default
  tls:
    secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
